force-app/main/default/objects/Lead/fields/Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Activity_Count__c</fullName>
    <label>Activity Count</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total number of activities (calls + F2F visits) logged against this lead. Updated by trigger.</description>
</CustomField>