force-app/main/default/objects/Lead/fields/Assigned_FLS__c.field-meta.xml
<CustomField>
    <fullName>Assigned_FLS__c</fullName>
    <label>Assigned FLS</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Leads</relationshipLabel>
    <relationshipName>Assigned_Leads</relationshipName>
    <description>The Field Sales representative assigned to work this lead</description>
</CustomField>