force-app/main/default/objects/Lead/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <description>The branch this lead belongs to, used for Trainer visibility rules</description>
</CustomField>