force-app/main/default/objects/Lead/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Activity intensity score based on call/visit frequency and recency (0-100).</description>
</CustomField>