force-app/main/default/objects/Lead/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Custom text field to store the full name of the lead</description>
</CustomField>