force-app/main/default/objects/Lead/fields/Is_Cross_Sell__c.field-meta.xml
<CustomField>
    <fullName>Is_Cross_Sell__c</fullName>
    <label>Is Cross Sell</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when this customer already has a lead for a different product. Set by deduplication logic.</description>
</CustomField>