force-app/main/default/objects/Lead/fields/Last_Score_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Score_Updated__c</fullName>
    <label>Last Score Updated</label>
    <type>DateTime</type>
    <description>Timestamp of the last AI score recalculation.</description>
</CustomField>