force-app/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Term Life</fullName><default>false</default><label>Term Life</label></value>
            <value><fullName>Health Insurance</fullName><default>false</default><label>Health Insurance</label></value>
            <value><fullName>Motor Insurance</fullName><default>false</default><label>Motor Insurance</label></value>
            <value><fullName>Home Insurance</fullName><default>false</default><label>Home Insurance</label></value>
            <value><fullName>Travel Insurance</fullName><default>false</default><label>Travel Insurance</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>