force-app/main/default/objects/Lead/fields/Propensity_Score__c.field-meta.xml
<CustomField>
    <fullName>Propensity_Score__c</fullName>
    <label>Propensity Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Likelihood of lead converting to a Proposal (0-100). Calculated by LeadScoringEngine.</description>
</CustomField>