force-app/main/default/objects/Lead/fields/Score_Tag__c.field-meta.xml
<CustomField>
    <fullName>Score_Tag__c</fullName>
    <label>Score Tag</label>
    <type>Picklist</type>
    <description>AI-driven lead tag. Hot = Propensity > 75. At Risk = Score < 30 with no activity for 7 days.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Normal</fullName><default>true</default><label>Normal</label></value>
            <value><fullName>Hot</fullName><default>false</default><label>Hot</label></value>
            <value><fullName>At Risk</fullName><default>false</default><label>At Risk</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>