force-app/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Lead Source (Custom)</label>
    <type>Picklist</type>
    <description>Source channel through which the lead was acquired</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Web</fullName><default>false</default><label>Web</label></value>
            <value><fullName>Walk-In</fullName><default>false</default><label>Walk-In</label></value>
            <value><fullName>Campaign</fullName><default>false</default><label>Campaign</label></value>
            <value><fullName>API</fullName><default>false</default><label>API</label></value>
            <value><fullName>WhatsApp</fullName><default>false</default><label>WhatsApp</label></value>
            <value><fullName>Import</fullName><default>false</default><label>Import</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>